traefik-kube/traefik-arm.yml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: traefik
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
      - name: traefik
        image: hypriot/rpi-traefik
        ports:
        - containerPort: 80
        - containerPort: 8080
        args:
        - --web
        - --kubernetes
      nodeSelector:
        kubeadm.alpha.kubernetes.io/role: master
        beta.kubernetes.io/arch: arm
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: NodePort
  ports:
  - port: 8080
    name: "ui"
#    nodePort: 30800
  - port: 80
    name: "web"
    nodePort: 30080
  selector: 
    app: traefik
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik.kube
    http:
      paths:
      - backend:
          serviceName: traefik
          servicePort: 8080
